fix: make dark mode more pretty, use currentColor as fill color

--- a/src/components/HomepageBrands/styles.module.css
+++ b/src/components/HomepageBrands/styles.module.css
@@ -29,6 +29,7 @@
   border-radius: 2px;
   width: calc((100% - 70px) / 8);
   max-width: 200px;
+  background-color: white;
 }
 
 .providerImg:hover {
